redmine/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-root-to-my-page
  namespace: redmine-k8s
spec:
  redirectRegex:
    regex: ^https?://red.mtaha.dev/$
    replacement: https://red.mtaha.dev/my/page
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redmine
  namespace: redmine-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`red.mtaha.dev`)
      priority: 10
      middlewares:
      - name: redirect-root-to-my-page
      services:
        - kind: Service
          name: redmine-main
          namespace: redmine-k8s
          passHostHeader: true
          port: 3000
          scheme: http
  tls:
    domains:
      - main: red.mtaha.dev
    secretName: wildcard-mtaha.dev-tls
